# deres.vimrc

./: .gitignore  .ideavimrc  .vimrc  .vimspector.json  LICENSE  Makefile  README.md  basic.vim  coc-settings.json  create-symlinks.sh  init.vim  link.sh  setup.bat  setup.sh
conf.d/: basic.vim  color.vim  custom.vim  filetype.vim
dein/: dein.toml  dein_ft.toml  dein_lazy.toml
dein/pluginrc/denite/: hook_source.vim  maping.vim
lib/vimspector/: find_args.sh  root_path.sh
neovim/: Makefile  init.lua  setup.bat  setup.sh  vimrc
neovim/lsp/: gopls.lua
neovim/lua/: lua  plugins.lua  tabline.lua
neovim/lua/lsp/: init.lua
neovim/lua/my/: coverage.lua  dap.lua  finder.lua  hydra.lua  notify.lua  test.lua
plugins/completion/cmp-path/: config.yml
plugins/completion/deoplete-omnisharp/: add.vim  config.yml
plugins/completion/lsp_signature.nvim/: config.yml
plugins/completion/lspkind-nvim/: config.yml  preload.vim
plugins/completion/nvim-cmp/: config.yml  preload.vim
plugins/dap/nvim-dap-ui/: add.vim  (+1 more)
setup-scripts/: .inst-npm-package.sh.swp  inst-all.sh  inst-cmigemo.sh  inst-composer.sh  inst-nodebrew.sh  inst-npm-package.sh  inst-npm.sh  inst-php-cs-fixer.sh  inst-pip-package.sh
v2/: Makefile  init.vim  setup.sh  vimrc
v2/conf.d/: color.vim  filetype.vim
v2/dein/: dein.toml  dein_lazy.toml
vplug-factory/: .gitignore  Cargo.toml
vplug-factory/src/: file.rs  lib.rs  main.rs  plugin_config.rs  template_creator.rs
vplug-factory/src/migration/: config.rs
vplug-factory/src/plugin_manager/: dein.rs  lazy.hbs  lazy.rs  mod.rs  packer.hbs  packer.rs
(+586 files in other folders)
