[package]
name = "vplug-factory"
version = "0.1.0"
authors = ["deresmos <deresmos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.5"
env_logger = "0.9.0"
log = "0.4.14"
scopeguard = "1.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
thiserror = "1.0.26"
toml = "0.5.8"
